[workspace]
members = ["htmoxide", "htmoxide-macros", "examples/todomvc"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.6"
tokio = { version = "1.48", features = ["full"] }
maud = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["htmoxide contributors"]
license = "MIT OR Apache-2.0"
