[package]
name = "htmoxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
persist-state = []  # Auto-hydrate view state from cookies + enable with_state_urls

[dependencies]
axum.workspace = true
tokio.workspace = true
maud.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
serde_json = "1"
tower.workspace = true
tower-http.workspace = true
tower-cookies = "0.11"

htmoxide-macros = { path = "../htmoxide-macros" }

# For global component registry
inventory = "0.3"
once_cell = "1.19"

[dev-dependencies]
