[package]
name = "htmoxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
persist-state = []  # Auto-hydrate view state from cookies + enable with_state_urls
qs-forms = ["dep:serde_qs", "dep:urlencoding"]  # Form parsing with array field support (field[])

[dependencies]
axum.workspace = true
tokio.workspace = true
maud.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
serde_json = "1"
tower.workspace = true
tower-http.workspace = true
tower-cookies = "0.11"
serde_qs = { version = "0.13", optional = true }
urlencoding = { version = "2.1", optional = true }

htmoxide-macros = { path = "../htmoxide-macros" }

# For global component registry
inventory = "0.3"
once_cell = "1.19"

[dev-dependencies]
