[package]
name = "dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
htmoxide = { path = "../../htmoxide" }
axum.workspace = true
tokio.workspace = true
maud.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
urlencoding = "2.1"
tower-sessions = "0.14"
axum-login = "0.18"
async-trait = "0.1"
